minor changes in bib

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -39,7 +39,7 @@
 
 @inproceedings{Coulais_et_al_2012,
        author = {{Coulais}, A. and {Schellens}, M. and {Arabas}, S. and {Lenoir}, M. and {Noreskal}, L. and {Erard}, S.},
-        title = "{Space Missions: Long Term Preservation of IDL-based Software using GDL}",
+        title = {Space Missions: Long Term Preservation of IDL-based Software using GDL},
     booktitle = {Astronomical Data Analysis Software and Systems XXI},
          year = 2012,
        editor = {{Ballester}, P. and {Egret}, D. and {Lorente}, N.~P.~F.},
@@ -49,7 +49,7 @@
 
 @inproceedings{Coulais_et_al_2014,
        author = {{Coulais}, A. and {Schellens}, M. and {Duvert}, G. and {Park}, J. and {Arabas}, S. and {Erard}, S. and {Roudier}, G. and {Hivon}, E. and {Mottet}, S. and {Laurent}, B. and {Pinter}, M. and {Kasradze}, N. and {Ayad}, M.},
-        title = "{Scaling GDL for Multi-cores to Process Planck HFI Beams Monte Carlo on HPC}",
+        title = {Scaling {GDL} for Multi-cores to Process {P}lanck {HFI} Beams {M}onte {C}arlo on {HPC}},
     booktitle = {Astronomical Data Analysis Software and Systems XXIII},
          year = 2014,
        editor = {{Manset}, N. and {Forshay}, P.},
@@ -77,7 +77,7 @@
 
 @inproceedings{Duvert_et_al_2020,
        author = {{Duvert}, Gilles and {Coulais}, Alain and {Schellens}, Mark},
-        title = "{GDL Today: Reaching a Viable Alternative to IDL}",
+        title = {GDL Today: Reaching a Viable Alternative to IDL},
     booktitle = {Astronomical Data Analysis Software and Systems XXVII},
          year = 2020,
        editor = {{Ballester}, Pascal and {Ibsen}, Jorge and {Solar}, Mauricio and {Shortridge}, Keith},
@@ -123,7 +123,7 @@
 }
 
 @article{lee2022transboundary,
-  title={Transboundary aerosol transport process and its impact on aerosol-radiation-cloud feedbacks in springtime over Northeast Asia},
+  title={Transboundary aerosol transport process and its impact on aerosol-radiation-cloud feedbacks in springtime over Northeast {A}sia},
   author={Lee, Hyo-Jung and Jo, Yu-Jin and Kim, Seungwoo and Kim, Daecheol and Kim, Jong-Min and Choi, Daniel and Jo, Hyun-Young and Bak, Juseon and Park, Shin-Young and Jeon, Wonbae and others},
   journal={Scientific Reports},
   volume={12},
