--- a/doc/gdl.1
+++ b/doc/gdl.1
@@ -42,19 +42,10 @@ processing, file input/output (incl. graphical and scientific data
 formats such as TIFF, PNG, netCDF, HDF etc) and interaction with host
 OS.
 
-Information on GDL/IDL/PV\-WAVE syntax and library routines can be
-found in e.g.:
+For a list of resources on GDL/IDL/PV\-WAVE syntax and library routines,
+see references in GDL v1.0 JOSS paper: https://doi.org/10.21105/joss.04633
 
-\- GDL documentation draft at: http://aramis.obspm.fr/~coulais/GDL/gdl.pdf
-
-\- IDL manual on\-line @ NASA.gov:
-http://idlastro.gsfc.nasa.gov/idl_html_help/home.html
-
-\- ITTVIS (ittvis.com) and Visual Numerics (vni.com) websites
-
-\- comp.lang.idl\-pvwave newsgroup
-
-\- newsletter at: https://sympa.obspm.fr/wws/info/gdl-announces
+GDL mailing list is maintained at: https://sympa.obspm.fr/wws/info/gdl-announces
 
 A vast part of GDL library routines is implemented using open\-source
 libraries including GSL, plPlot, and optionally: readline, FFTW, Eigen3,
